# LoadShow-OTAuth

./: .gitignore  README.md
cause-analysis-of-load-side-channel/: RF.py  main_case.py
cause-analysis-of-load-side-channel/file/: case1.csv  case1_feature.pickle  case2.csv  case2_feature.pickle  case3.csv  case3_feature.pickle  case4.csv  case4_feature.pickle  case5.csv  case5_feature.pickle  case6.csv  case6_feature.pickle
dataset/: Readme.md
dataset/10700-550X/cpu/10700-AliyunNetdisk/: 10.csv  14.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  23.csv  25.csv  27.csv  29.csv  3.csv  31.csv  32.csv  36.csv  37.csv  39.csv  44.csv  45.csv  47.csv  5.csv  51.csv  52.csv  54.csv  56.csv  59.csv  6.csv  60.csv  64.csv  9.csv
dataset/10700-550X/cpu/10700-BaiduNetdisk/: 1.csv  11.csv  12.csv  18.csv  2.csv  22.csv  24.csv  26.csv  3.csv  30.csv  31.csv  33.csv  4.csv  41.csv  42.csv  48.csv  49.csv  50.csv  53.csv  54.csv  62.csv  63.csv  64.csv
dataset/10700-550X/cpu/10700-altium_designer/: 12.csv  13.csv  15.csv  16.csv  18.csv  2.csv  21.csv  22.csv  24.csv  25.csv  29.csv  32.csv  4.csv  6.csv  7.csv
dataset/10700-550X/cpu/10700-bandicam/: 1.csv  11.csv  18.csv  19.csv  23.csv  24.csv  29.csv  30.csv  31.csv  32.csv  4.csv  6.csv  7.csv
dataset/10700-550X/cpu/10700-bandizip/: 1.csv  102.csv  105.csv  108.csv  109.csv  11.csv  111.csv  112.csv  115.csv  116.csv  117.csv  118.csv  122.csv  125.csv  130.csv  132.csv  134.csv  137.csv  139.csv  14.csv  (+53 more)
evaluation-of-effectiveness/: README  README.md
evaluation-of-effectiveness/SOR-Pixel/: RF.py  SOR_Pixel_main.py
evaluation-of-effectiveness/android_fingerprint_extraction/app/: build.gradle
evaluation-of-effectiveness/android_fingerprinting_extraction/: settings.gradle
evaluation-of-effectiveness/android_fingerprinting_extraction/app/: opengl.md
evaluation-of-effectiveness/android_fingerprinting_extraction/app/src/main/cpp/: CMakeLists.txt  cpp_renderer.cpp  cpp_renderer.h
evaluation-of-multi-platform-compatibility/: README  README.md  fp_for_all.html  fp_for_cpu.html  fp_for_gpu.html
evaluation-of-multi-platform-compatibility/SOR33/: SOR33_RF_main.py  random_forest.py
evaluation-of-multi-platform-compatibility/STR-MAC/: STR_MAC1.csv  STR_MAC_RF_main.py  mac1_cpu.csv  mac1_gpu.csv  mac2_cpu.csv  mac2_gpu.csv  random_forest.py
evaluation-of-multi-platform-compatibility/STR-Pixel/: STR_Pixel_RF_main.py  random_forest.py
evaluation-of-multi-platform-compatibility/STR18/: STR18_RF_main.py  random_forest.py
evaluation-of-multi-platform-compatibility/STR18&SOR18/: STR18_RF_main.py  random_forest.py
evaluation-of-multi-platform-compatibility/single_application_recognition_RF/: SOR33_RF_main.py  log_9600_feature.txt  random_forest.py
impact-factors/ablation_cpu_gpu/: ablation_study_main.py  random_forest.py
impact-factors/ablation_cpu_gpu/file/: STR_MAC2.csv  STR_MAC_cpu.csv  STR_MAC_gpu.csv  STR_Pixel_cpu.csv  STR_Pixel_gpu.csv
impact-factors/feature_extraction/: impact_factor_main.py
impact-factors/feature_extraction/file/: pixel_train_2_16.csv  pixel_train_2_32.csv  pixel_train_2_64.csv  pixel_train_4_32.csv  pixel_train_4_64.csv  pixel_train_4_8.csv  pixel_train_feature_2_64.csv  pixel_train_feature_4_32.csv  pixel_train_feature_4_64.csv
impact-factors/n_parameter&feature_extraction/file/: pixel_test_feature_64.csv  pixel_train_2_8.csv  pixel_train_4_16.csv  pixel_train_feature_2_16.csv  pixel_train_feature_2_32.csv  pixel_train_feature_8_64.csv
impact-factors/p_parameter/: 9600_feature0.pickle  9600_feature1.pickle  9600_feature2.pickle  9600_feature3.pickle  p_parameter_main.py  random_forest.py
impact-factors/p_parameter/file/: feature1.csv  feature2.csv  feature3.csv  feature4.csv
multi_application_recognition/: Readme.md
multi_application_recognition/multi_app_recognition_n2/: TOR36_n1_RF_main.py  feature.pickle  random_forest.py
multi_application_recognition/multi_app_recognition_n3/: TOR48_n2_RF_main.py  feature.pickle  random_forest.py
multi_application_recognition/multi_app_recognition_n4/: TOR40_n3_RF_main.py  random_forest.py
utils/: dataset.py  feature_api.py  get_feature_csv.py  get_tensor_dataset.py  get_tensor_multi_label.py  program_class.py  readme.md
(+34648 files in other folders)
